<resources>
    <string name="app_name">eSportsList</string>
    <string name="enter_name">ENTER NAME</string>
    <string name="enter_game">ENTER GAME</string>
    <string name="enter_nationality">ENTER NATIONALITY</string>
    <string name="enter_team">ENTER TEAM</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="save">SAVE</string>
    <string name="team">TEAM:</string>
    <string name="game">GAME:</string>
    <string name="nation">NATION:</string>
    <string name="real_name">REAL NAME:</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
</resources>
