<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditEAthlete">

    <ImageView
        android:id="@+id/ivPic"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_handle"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:textColor="#000000"
        android:gravity="center|start"
        app:layout_constraintStart_toEndOf="@+id/ivPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/enter_username" />


    <EditText
        android:id="@+id/update_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:layout_constraintTop_toBottomOf="@id/update_handle" />

    <EditText
        android:id="@+id/update_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_game"
        app:layout_constraintTop_toBottomOf="@id/update_name" />

    <EditText
        android:id="@+id/update_nation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_nationality"
        app:layout_constraintTop_toBottomOf="@id/update_game" />

    <EditText
        android:id="@+id/update_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_team"
        app:layout_constraintTop_toBottomOf="@id/update_nation" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>